# CMiniRenderer

./: CMakeLists.txt  README.md  main.c
Glad/include/glad/: glad.h
Glad/src/: glad.c
Glfw/: README.md
Renderer/: Batcher.c  Batcher.h  MiniRender.h  Renderer.c  Renderer.h  Shader.c  Shader.h  Window.c  Window.h
